2004-09-10  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_stat.c: Improve output by also printing .shared and
	.persistent.

	* nscd/connections.c: Allow cache sharing to be really disabled.

2004-09-10  Jakub Jelinek  <jakub@redhat.com>

	* malloc/malloc.c (_int_free): Only do arena boundary check for
	contiguous arenas.

2004-09-10  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>

	* stdlib/longlong.h [__M32R__] (add_ssaaaa, sub_ddmmss): Fix broken
	instruct operands.
	* elf/elf.h: Add R_M32R_* relocs.

2004-09-09  Ulrich Drepper  <drepper@redhat.com>

	* misc/sys/cdefs.h: Despite what the gcc manual says, gcc 3.2
	seems not to support the nothrow attribute.  Use it only for gcc
	3.3 and higher.

	* malloc/hooks.c (top_check): Print top chunk corruption as normal
	error message.

	* malloc/malloc.c (malloc_printerr): Don't make informational
	message look like error message.

2004-09-09  Andreas Jaeger  <aj@suse.de>

	* nscd/Makefile (CFLAGS-nscd_setup_thread.c): Set to -fpie.

2004-09-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h (__SCM_CONNECT): Removed.

	* malloc/malloc.c (_int_free): Add inexpensive double free and
	memory corruption tests.
	(malloc_printf_nc): Renamed to malloc_printerr.  Second parameter
	is no format string anymore.  Don't use stdio.  Adjust all callers.
	* malloc/hooks.c: Adjust malloc_printf_nc callers.

2004-09-08  Roland McGrath  <roland@redhat.com>

	* malloc/mcheck.c: Don't use __P.
	Use prototypes definitions for static functions.

2004-09-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/fpu/bits/mathinline.h: Use __NTH instead of __THROW.

2004-09-08  Ulrich Drepper  <drepper@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* nscd/nscd-client.h: Add a few #includes.

	* nscd/Makefile (nscd-modules): Add nscd_setup_thread.
	* nscd/connections.c (nscd_run): Call setup_thread for maintenance
	threads.
	* nscd/nscd-client.h (struct database_pers_head): Add